<resources>
    <string name="app_name">wanAndroid</string>

    <string name="press_again">在点击一次退出</string>
    <string name="navigation_main">首页</string>
    <string name="navigation_knowledge_hierarchy">知识体系</string>
    <string name="navigation_me">我的</string>

    <string name="navigation_navigation">导航</string>
    <string name="knowledge_hierarchy">\???</string>
    <string name="click_avatar_login">点击头像登陆</string>
    <string name="logout">退出登陆</string>
    <string name="setting">设置</string>
    <string name="my_bookmark">我的书签</string>
    <string name="my_collection">我的收藏</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="title_login">登陆</string>
    <string name="the_username_or_password_can_not_be_empty">用户名和密码不能为空</string>


    <string name="not_done">待办清单</string>
    <string name="done">完成清单</string>
    <string name="only">一个</string>
    <string name="work">工作</string>
    <string name="study">学习</string>
    <string name="life">生活</string>


    <string name="share_view">shareView</string>
    <string name="my_rank">我的积分</string>

    <string name="preference_basic_setting">基本设置</string>

    <string name="key_show_top_article">key_show_top_article</string>
    <string name="preference_summary_show_top_article">开启后首页会显示置顶文章</string>
    <string name="preference_show_top_article">显示置顶文章</string>
    <string name="key_clean_cache">key_clean_cache</string>
    <string name="preference_summary_clean_cache">0KB</string>
    <string name="preference_clean_cache">清除缓存</string>
    <string name="preference_exit">退出</string>
    <string name="preference_summary_exit">退出登陆</string>
    <string name="key_exit">key_exit</string>
    <string name="icon_color">icon_color</string>
    <string name="preference_summary_color">设置APP的主题颜色</string>
    <string name="preference_clean_color">主题颜色</string>


    <string name="priority_first">重要且紧急</string>
    <string name="priority_second">重要不紧急</string>
    <string name="priority_third">紧急但不重要</string>
    <string name="priority_fourth">不重要不紧急</string>
</resources>
