<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/civAvatar"
            android:layout_width="@dimen/dp_72"
            android:layout_height="@dimen/dp_72"
            android:src="@mipmap/ic_avatar" />

        <TextView
            android:id="@+id/tvNick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_5"
            android:text="@string/click_avatar_login"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <View style="@style/line_view" />

        <LinearLayout
            android:id="@+id/ll_current_coin"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginRight="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/my_rank" />

            <TextView
                android:id="@+id/tv_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_toLeftOf="@id/tv_current_coin"
                android:gravity="center"
                android:text="当前积分:" />


            <TextView
                android:id="@+id/tv_current_coin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:drawableRight="@mipmap/ic_right"
                android:gravity="center_vertical"
                android:text="390"
                android:textColor="?attr/colorPrimary"
                android:textSize="14sp" />
        </LinearLayout>


        <View style="@style/line_view" />

        <TextView
            android:id="@+id/tvMyCollection"
            style="@style/tv_operating_style"
            android:background="@drawable/item_selector"
            android:drawablePadding="@dimen/dp_5"
            android:text="@string/my_collection" />
        <!--android:drawableLeft="@mipmap/ic_collection"-->

        <View style="@style/line_view" />

        <TextView
            android:id="@+id/tvMyBookmark"
            style="@style/tv_operating_style"
            android:background="@drawable/item_selector"
            android:drawablePadding="@dimen/dp_5"
            android:text="@string/my_bookmark" />
        <!--android:drawableLeft="@mipmap/ic_bookmark"-->

        <View style="@style/line_view" />

        <TextView
            android:id="@+id/tvSetting"
            style="@style/tv_operating_style"
            android:background="@drawable/item_selector"
            android:drawablePadding="@dimen/dp_5"
            android:text="@string/setting" />
        <!--android:drawableLeft="@mipmap/ic_setting"-->

        <View style="@style/line_view" />

        <LinearLayout
            android:id="@+id/llLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_selector"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/dp_15"
                android:text="@string/logout"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

            <View style="@style/line_view" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
